--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@nuxt/content": "1.9.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "nuxt": "2.14.6",
     "prism-themes": "1.4.1"
   },
